<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/contatoListFragment">

    <fragment
        android:id="@+id/contatoListFragment"
        android:name="com.example.agenda_contatos.ui.list.ContatoListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_contato_list">
        <action
            android:id="@+id/action_contatoListFragment_to_contatoDetailFragment"
            app:destination="@id/contatoDetailFragment" />
        <action
            android:id="@+id/action_contatoListFragment_to_contatoFormFragment"
            app:destination="@id/contatoFormFragment" />
    </fragment>

    <fragment
        android:id="@+id/contatoDetailFragment"
        android:name="com.example.agenda_contatos.ui.detail.ContatoDetailFragment"
        android:label="@string/contato_detail_title"
        tools:layout="@layout/fragment_contato_detail">
        <argument
            android:name="contatoId"
            app:argType="integer" />
        <action
            android:id="@+id/action_contatoDetailFragment_to_contatoFormFragment"
            app:destination="@id/contatoFormFragment" />
    </fragment>

    <fragment
        android:id="@+id/contatoFormFragment"
        android:name="com.example.agenda_contatos.ui.form.ContatoFormFragment"
        android:label="@string/contato_form_title"
        tools:layout="@layout/fragment_contato_form">
        <argument
            android:name="contatoId"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>
</navigation>
